--- a/Ketch/User Interface/Game/GameView.xib
+++ b/Ketch/User Interface/Game/GameView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -13,6 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameViewController">
             <connections>
+                <outlet property="dockBadge" destination="WOT-kB-qH2" id="vny-NG-Upp"/>
                 <outlet property="keepSlot" destination="u8F-ne-eBp" id="NzU-jq-vfP"/>
                 <outlet property="ketchIcon" destination="9Js-kF-hh5" id="30X-9U-Hah"/>
                 <outlet property="marrySlot" destination="Iti-rA-q5V" id="Wug-mD-v8P"/>
@@ -64,6 +65,14 @@
                         <action selector="goToDock:" destination="-1" eventType="touchUpInside" id="iXz-ii-Ny8"/>
                     </connections>
                 </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WOT-kB-qH2" userLabel="New Indicator">
+                    <rect key="frame" x="288" y="15" width="12" height="12"/>
+                    <color key="backgroundColor" red="0.950525701" green="0.36602467300000002" blue="0.44692194460000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="12" id="ObQ-Dp-KCo"/>
+                        <constraint firstAttribute="width" secondItem="WOT-kB-qH2" secondAttribute="height" multiplier="1:1" id="ovM-Jm-iQ1"/>
+                    </constraints>
+                </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skipText" translatesAutoresizingMaskIntoConstraints="NO" id="o6p-MY-cjB" userLabel="Skip Slot">
                     <rect key="frame" x="19" y="258" width="100" height="100"/>
                     <constraints>
@@ -86,19 +95,19 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marry" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9qx-dJ-kUe">
-                    <rect key="frame" x="138" y="258" width="45" height="21"/>
+                    <rect key="frame" x="138.5" y="258" width="44.5" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Skip" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KDo-UQ-ueF">
-                    <rect key="frame" x="52" y="366" width="34" height="21"/>
+                    <rect key="frame" x="52" y="366" width="34" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keep" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xs5-fm-J17">
-                    <rect key="frame" x="232" y="365" width="40" height="21"/>
+                    <rect key="frame" x="232" y="365" width="40" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -126,6 +135,8 @@
             </subviews>
             <color key="backgroundColor" red="0.043137254901960784" green="0.89803921568627454" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="WOT-kB-qH2" firstAttribute="width" secondItem="WOT-kB-qH2" secondAttribute="height" multiplier="1:1" id="1YH-7I-pom"/>
+                <constraint firstItem="dfZ-2s-ycX" firstAttribute="trailing" secondItem="WOT-kB-qH2" secondAttribute="trailing" constant="20" id="2Zp-2U-Gnm"/>
                 <constraint firstAttribute="centerX" secondItem="Iti-rA-q5V" secondAttribute="centerX" id="3Xo-lg-wda"/>
                 <constraint firstItem="o6p-MY-cjB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="19" id="6je-H4-tys"/>
                 <constraint firstAttribute="trailing" secondItem="BUv-K6-f7I" secondAttribute="trailing" id="8Vy-Bx-KGq"/>
@@ -144,6 +155,7 @@
                 <constraint firstItem="1Lu-FI-gAz" firstAttribute="width" secondItem="k7t-mm-QgH" secondAttribute="width" id="OgN-pa-Gcn"/>
                 <constraint firstItem="Iti-rA-q5V" firstAttribute="centerX" secondItem="9qx-dJ-kUe" secondAttribute="centerX" id="QcF-BM-zoG"/>
                 <constraint firstItem="svh-Tk-FMJ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="R5b-iB-hQI"/>
+                <constraint firstItem="WOT-kB-qH2" firstAttribute="top" secondItem="dfZ-2s-ycX" secondAttribute="top" constant="15" id="Rxt-EI-C1k"/>
                 <constraint firstAttribute="bottom" secondItem="k7t-mm-QgH" secondAttribute="bottom" constant="39" id="TOd-Sk-p09"/>
                 <constraint firstItem="KDo-UQ-ueF" firstAttribute="top" secondItem="o6p-MY-cjB" secondAttribute="bottom" constant="8" id="XVP-Wr-yQJ"/>
                 <constraint firstItem="FWx-3L-EJd" firstAttribute="leading" secondItem="k7t-mm-QgH" secondAttribute="trailing" constant="2" id="Yxu-f2-R4j"/>
@@ -166,6 +178,7 @@
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <variation key="default">
                 <mask key="constraints">
+                    <exclude reference="1YH-7I-pom"/>
                     <exclude reference="9M7-ZI-WnA"/>
                     <exclude reference="vcd-4U-0ER"/>
                     <exclude reference="Yxu-f2-R4j"/>
