Renaming KAttributedLabel to just AttributedLabel because swift has modules

--- a/Ketch/User Interface/Game/GameView.xib
+++ b/Ketch/User Interface/Game/GameView.xib
@@ -207,7 +207,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKG-EO-iuj" customClass="KAttributedLabel" customModule="Ketch" customModuleProvider="target">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKG-EO-iuj" customClass="AttributedLabel" customModule="Ketch" customModuleProvider="target">
                     <rect key="frame" x="67" y="160" width="240" height="65"/>
                     <attributedString key="attributedText">
                         <fragment>
